--- a/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
@@ -21,7 +21,7 @@
             <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
         <Button Grid.Row="0" Height="30" Width="70" Content="View" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="70, 0"
-                Command="{Binding ViewInventoryCommand}" />
+                Command="{Binding ViewCommand}" />
         <Button Grid.Row="0" Height="30" Width="70" Content="Compare" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="140, 0"
                 Command="{Binding CompareCommand}" />
         <Button Grid.Row="0" Height="30" Width="120" Content="Excel Inventory List" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="210, 0"
