--- a/BuddhaBowls/UserControls/WizardControl.xaml
+++ b/BuddhaBowls/UserControls/WizardControl.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Header" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 10" />
+        <TextBlock Grid.Row="0" Text="{Binding Header}" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 10" />
 
         <ContentControl Grid.Row="1" Content="{Binding WizardStepControl}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
 
