--- a/BuddhaBowls/UserControls/InventoryListControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryListControl.xaml
@@ -65,7 +65,11 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Path=Name, Mode=OneWay}" Width="3*"/>
                 <DataGridTextColumn Header="Category" Binding="{Binding Path=Category, Mode=OneWay}" Width="2*"/>
-                <DataGridTemplateColumn Header="Vendor" Width="3*" Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}">
+                <DataGridTextColumn Header="Unit" Binding="{Binding Path=PurchasedUnit, Mode=OneWay}" Width="2*" />
+                <!--Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}" />-->
+                <DataGridTextColumn Header="Unit Price" Binding="{Binding Path=LastPurchasedPrice, StringFormat=c}" Width="2*" />
+                <!--Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}" />-->
+                <DataGridTemplateColumn Header="Vendor" Width="3*" > <!--Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}"> -->
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <ComboBox ItemsSource="{Binding Vendors}" SelectedItem="{Binding SelectedVendor}" SelectionChanged="ComboBox_Selected"
@@ -73,12 +77,16 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="Pack Size" Binding="{Binding Path=PurchasedUnit, Mode=OneWay}" Width="2*"
-                                    Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}" />
-                <DataGridTextColumn Header="Last Price" Binding="{Binding Path=LastPurchasedPrice, StringFormat=c}" Width="2*"
-                                    Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}" />
+                <DataGridTextColumn Header="Conversion" Binding="{Binding Path=Conversion, StringFormat=0.##}" Width="1*"
+                                    Visibility="{Binding Path=Data.NewInvVisibility, Source={StaticResource proxy}}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Count Unit" Binding="{Binding Path=CountUnit}" Width="1*"
+                                    Visibility="{Binding Path=Data.NewInvVisibility, Source={StaticResource proxy}}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Count Price" Binding="{Binding Path=CountPrice, StringFormat=c}" Width="2*"
+                                    Visibility="{Binding Path=Data.NewInvVisibility, Source={StaticResource proxy}}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Count" Binding="{Binding Path=Count, StringFormat=0.##}" Width="1*"
                                     Visibility="{Binding Path=Data.NewInvVisibility, Source={StaticResource proxy}}" />
+                <DataGridTextColumn Header="Extension" Binding="{Binding Path=PriceExtension, StringFormat=c}" Width="2*"
+                                    Visibility="{Binding Path=Data.NewInvVisibility, Source={StaticResource proxy}}" IsReadOnly="True"/>
                 <DataGridTemplateColumn x:Name="arrowColumn" Width="60" Visibility="{Binding Path=Data.ArrowVisibility, Source={StaticResource proxy}}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
