--- a/BuddhaBowls/UserControls/ChangeableTabControl.xaml
+++ b/BuddhaBowls/UserControls/ChangeableTabControl.xaml
@@ -13,10 +13,19 @@
         </Grid.RowDefinitions>
         <Label Content="{Binding Header}" Grid.Row="0" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top"
                Margin="0, 5" />
-        <Button x:Name="button1" Content="{Binding PrimaryPageName}" HorizontalAlignment="Center" Margin="-100,10,0,0" Grid.Row="0"
-                VerticalAlignment="Bottom" Width="100" Command="{Binding PrimaryCommand}"/>
-        <Button x:Name="button2" Content="{Binding SecondaryPageName}" HorizontalAlignment="Center" Margin="100,10,0,0" Grid.Row="0"
-                VerticalAlignment="Bottom" Width="100" Command="{Binding SecondaryCommand}"/>
+        <ItemsControl ItemsSource="{Binding SwitchButtonList}" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="25">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Button Content="{Binding PageName}" Width="100" Height="25" Command="{Binding SwitchCommand}"
+                            CommandParameter="{Binding PageIdx}" />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
         <ContentControl Content="{Binding TabControl}" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </UserControl>
