--- a/BuddhaBowls/UserControls/InventoryListControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryListControl.xaml
@@ -69,6 +69,7 @@
                 <!--Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}" />-->
                 <DataGridTextColumn Header="Unit Price" Binding="{Binding Path=LastPurchasedPrice, StringFormat=c}" Width="2*" />
                 <!--Visibility="{Binding Path=Data.MasterVisibility, Source={StaticResource proxy}}" />-->
+                <DataGridTextColumn Header="Conversion" Binding="{Binding Path=Conversion, StringFormat=0.##}" Width="1*" />
                 <DataGridTemplateColumn Header="Vendor" Width="3*"> <!--Visibility="{Binding Path=Data.EditVendorVisibility, Source={StaticResource proxy}}">-->
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -79,8 +80,6 @@
                 </DataGridTemplateColumn>
                 <!--<DataGridTextColumn Header="Vendor" Width="3*" Binding="{Binding SelectedVendor.Name}" IsReadOnly="True"
                                     Visibility="{Binding Path=Data.ReadOnlyVendorVisibility, Source={StaticResource proxy}}" />-->
-                <DataGridTextColumn Header="Conversion" Binding="{Binding Path=Conversion, StringFormat=0.##}" Width="1*"
-                                    Visibility="{Binding Path=Data.NewInvVisibility, Source={StaticResource proxy}}"/>
                 <DataGridTextColumn Header="Count Unit" Binding="{Binding Path=CountUnit}" Width="1*"
                                     Visibility="{Binding Path=Data.NewInvVisibility, Source={StaticResource proxy}}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Count Price" Binding="{Binding Path=CountPrice, StringFormat=c}" Width="2*"
