--- a/BuddhaBowls/UserControls/NewRecipe.xaml
+++ b/BuddhaBowls/UserControls/NewRecipe.xaml
@@ -7,63 +7,67 @@
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
              xmlns:uc="clr-namespace:BuddhaBowls.UserControls"
              xmlns:parent="clr-namespace:BuddhaBowls"
+             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="50" />
-        </Grid.RowDefinitions>
-
-        <TextBlock Text="{Binding Header}" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24"/>
-        <Grid Grid.Row="1">
+             d:DesignHeight="380" d:DesignWidth="800">
+    <Grid Grid.Row="1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <ItemsControl ItemsSource="{Binding FieldsCollection}" Grid.Column="0" Margin="0, 60, 0,  0">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="{x:Type parent:FieldSetting}">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"></ColumnDefinition>
-                                <ColumnDefinition Width="2*"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <Label Grid.Column="0" Content="{Binding Name}" Margin="0, 0, 0, 0" HorizontalAlignment="Right" VerticalAlignment="Center"
-                                   HorizontalContentAlignment="Right" Height="28"/>
-                            <TextBox Grid.Column="1" Text="{Binding Value}" Margin="0, 10, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                     Width="200" Height="28" TextChanged="FieldValue_TextChanged" />
-                            <Border Grid.Column="1" BorderThickness="{Binding Error}"  BorderBrush="Red" Margin="0, 10, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" Height="28" />
-                        </Grid>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-            <Border BorderThickness="1" BorderBrush="Black" Grid.Column="1" />
-            <TextBlock Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="20" Text="Ingredients"/>
-            <Button Grid.Column="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" VerticalAlignment="Top"
-                    Margin="0, 30, 35, 0" Command="{Binding AddItemCommand}">
-                <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-            </Button>
-            <Button Grid.Column="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" VerticalAlignment="Top"
-                    Margin="0, 30, 5, 0" Command="{Binding RemoveItemCommand}">
-                <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-            </Button>
-            <DataGrid Grid.Column="2" ItemsSource="{Binding Ingredients}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="1, 60, 1, 1"
-                  ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedItem}" AutoGenerateColumns="False"
-                  CanUserAddRows="False">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Name" Binding="{Binding Path=Name, Mode=OneWay}" Width="3*"/>
-                    <DataGridTextColumn Header="Recipe Unit" Binding="{Binding Path=RecipeUnit, Mode=OneWay}" Width="3*"/>
-                    <DataGridTextColumn Header="QTY" Binding="{Binding Path=Count}" Width="2*" />
-                </DataGrid.Columns>
-            </DataGrid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Label Grid.Column="0" Grid.Row="0" Content="Name:" Margin="10, 0" HorizontalAlignment="Right" VerticalAlignment="Center"
+                                HorizontalContentAlignment="Right" Height="28"/>
+            <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Item.Name}" Margin="10, 0" HorizontalAlignment="Left" VerticalAlignment="Center"
+                                    Width="200" Height="28" />
+            <Border Grid.Column="1" BorderThickness="{Binding NameError}"  BorderBrush="Red" Margin="10, 0" HorizontalAlignment="Left"
+                    VerticalAlignment="Center" Width="200" Height="28" />
+            <Label Grid.Column="0" Grid.Row="1" Content="Category:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="1" Text="{Binding Item.Category}" HorizontalAlignment="Left" VerticalAlignment="Center"
+                    Width="150" Height="25" Margin="10, 0" ItemsSource="{Binding CategoryList}" IsEditable="True"/>
+            <Label Grid.Column="0" Grid.Row="2" Content="Count Unit:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Height="25" Margin="10, 0"
+                  ItemsSource="{Binding CountUnitsList}" IsEditable="True" Text="{Binding Item.CountUnit}"/>
+            <Label Grid.Column="0" Grid.Row="3" Content="Recipe Unit:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Height="25" Margin="10, 0"
+                  ItemsSource="{Binding RecipeUnitsList}" IsEditable="True" Text="{Binding Item.RecipeUnit}"/>
+            <Label Grid.Column="0" Grid.Row="4" Content="Count-Recipe Unit&#10;Conversion:" HorizontalAlignment="Right" VerticalAlignment="Center"
+                    HorizontalContentAlignment="Right" />
+            <Controls:NumericUpDown Grid.Column="1" Grid.Row="4" Minimum="1" StringFormat="0.##" Value="{Binding Item.RecipeUnitConversion}"
+                                HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" Height="25" Margin="10, 0" />
         </Grid>
-        <Button x:Name="button" Grid.Row="2" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 85, 0" Width="75"
-                Command="{Binding SaveCommand}" />
-        <Button x:Name="button1" Grid.Row="2" Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 5, 0" Width="75"
-                Command="{Binding CancelCommand}" />
+        <Border BorderThickness="1" BorderBrush="Black" Grid.Column="1" />
+        <TextBlock Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="20" Text="Ingredients"/>
+        <Button Grid.Column="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" VerticalAlignment="Top"
+                Margin="0, 30, 35, 0" Command="{Binding AddItemCommand}">
+            <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        </Button>
+        <Button Grid.Column="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" VerticalAlignment="Top"
+                Margin="0, 30, 5, 0" Command="{Binding RemoveItemCommand}">
+            <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        </Button>
+        <DataGrid Grid.Column="2" ItemsSource="{Binding Ingredients}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="1, 60, 1, 1"
+                ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedItem}" AutoGenerateColumns="False"
+                CanUserAddRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding Path=Name, Mode=OneWay}" Width="3*"/>
+                <DataGridTextColumn Header="Recipe Unit" Binding="{Binding Path=RecipeUnit, Mode=OneWay}" Width="3*"/>
+                <DataGridTextColumn Header="QTY" Binding="{Binding Path=Count}" Width="2*" />
+            </DataGrid.Columns>
+        </DataGrid>
         <Label x:Name="label9" Grid.Row="2" Content="{Binding ErrorMessage}" HorizontalAlignment="Left" VerticalAlignment="Center"
-               Margin="5,0,0,0" Width="250" Height="25" Foreground="Red" />
+                Margin="5,0,0,0" Width="250" Height="25" Foreground="Red" />
     </Grid>
 </UserControl>
