--- a/BuddhaBowls/UserControls/VendorTabControl.xaml
+++ b/BuddhaBowls/UserControls/VendorTabControl.xaml
@@ -12,7 +12,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition Height="60" />
-            <RowDefinition Height="30" />
             <RowDefinition Height="*" />
             <RowDefinition Height="30" />
         </Grid.RowDefinitions>
@@ -23,31 +22,57 @@
                  Height="25"  Width="200" Controls:TextBoxHelper.Watermark="Filter by item name..." TextChanged="FilterItems_TextChanged" />
         <Label x:Name="label1" Grid.Row="1" Content="Vendor Name:" Margin="-300, 0, 0, 0" HorizontalAlignment="Center"
                VerticalAlignment="Bottom"/>
-        <Button Content="Get Order Sheet" HorizontalAlignment="Right" Margin="0,0,360,0" Grid.Row="2" VerticalAlignment="Center" Width="130"
-                Command="{Binding GetOrderSheetCommand}"/>
-        <Button Content="Change Vendor Items" HorizontalAlignment="Right" Margin="0,0,230,0" Grid.Row="2" VerticalAlignment="Center" Width="130"
-                Command="{Binding ChangeVendorItemsCommand}"/>
-        <Button Grid.Row="2" Content="Change Rec List Order" Height="25" Width="150" HorizontalAlignment="Right" VerticalAlignment="Center"
-                Margin="0, 0, 80, 0" Command="{Binding ChangeRecListOrderCommand}" />
-        <Button Grid.Row="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 35, 0"
-                Command="{Binding AddVendorCommand}">
-            <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        </Button>
-        <Button Grid.Row="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 5, 0"
-                Command="{Binding DeleteVendorCommand}">
-            <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        </Button>
-        <DataGrid Grid.Row="3" ItemsSource="{Binding FilteredVendorList}" HorizontalAlignment="Stretch"
-                              VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                              SelectedItem="{Binding SelectedVendor}" AutoGenerateColumns="False"
-                              CellEditEnding="VendorList_CellEditEnding" CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="1*"/>
-                <DataGridTextColumn Header="Contact" Binding="{Binding Contact}" Width="1*"/>
-                <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="1*"/>
-                <DataGridTextColumn Header="Phone #" Binding="{Binding PhoneNumber}" Width="1*" />
-            </DataGrid.Columns>
-        </DataGrid>
+        
+        
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="5*" />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Row="0" Grid.Column="0" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+                    Margin="0, 0, 35, 0" Command="{Binding AddVendorCommand}">
+                <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            </Button>
+            <Button Grid.Row="0" Grid.Column="0" Content="Edit" HorizontalAlignment="Right" Margin="0,0,70,0" VerticalAlignment="Center"
+                    Width="70" Command="{Binding EditVendorCommand}"/>
+            <Button Grid.Row="0" Grid.Column="0" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+                    Margin="0, 0, 5, 0" Command="{Binding DeleteVendorCommand}">
+                <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            </Button>
+            <Button Grid.Row="0" Grid.Column="1" Content="Get Order Sheet" HorizontalAlignment="Right" Margin="0,0,155,0"  VerticalAlignment="Center"
+                    Width="130" Command="{Binding GetOrderSheetCommand}"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="Change Rec List Order" Height="25" Width="150" HorizontalAlignment="Right"
+                    VerticalAlignment="Center" Margin="0, 0, 5, 0" Command="{Binding ChangeRecListOrderCommand}" />
+            
+            <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding FilteredVendorList}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                      ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedVendor}" AutoGenerateColumns="False"
+                      CanUserAddRows="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Vendor" Binding="{Binding Name}" Width="*" IsReadOnly="True"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <DataGrid Grid.Row="1" Grid.Column="1" ItemsSource="{Binding SelectedVendorItems}"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                      Margin="1, 1, 1, 1" ScrollViewer.VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="False"
+                      CanUserSortColumns="False" CanUserReorderColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Inventory Item Name" Binding="{Binding Path=Name, Mode=OneWay}" Width="3*"/>
+                    <DataGridTextColumn Header="Purchased Price" Binding="{Binding LastPurchasedPrice, StringFormat=c}" Width="2*" />
+                    <DataGridTextColumn Header="Conv" Binding="{Binding Conversion}" Width="1*" />
+                    <DataGridTemplateColumn Header="Purchased Unit" Width="2*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <ComboBox Text="{Binding PurchasedUnit}" IsEditable="True" ItemsSource="{Binding Path=DataContext.PurchasedUnitsList,
+                                                    RelativeSource={RelativeSource AncestorType=DataGrid}}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
         <Button Grid.Row="4" Height ="25" Width="80" Content="Save" HorizontalAlignment="Right" Margin="5, 0" Command="{Binding SaveCommand}" />
         <Button Grid.Row="4" Height ="25" Width="80" Content="Reset" HorizontalAlignment="Right" Margin="85, 0" Command="{Binding ResetCommand}" />
     </Grid>
