--- a/BuddhaBowls/UserControls/NewPrepItem.xaml
+++ b/BuddhaBowls/UserControls/NewPrepItem.xaml
@@ -17,31 +17,18 @@
                 <RowDefinition Height="40" />
                 <RowDefinition Height="40" />
                 <RowDefinition Height="40" />
-                <RowDefinition Height="40" />
-                <RowDefinition Height="40" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Label Grid.Column="0" Grid.Row="0" Content="Name:" Margin="10, 0" HorizontalAlignment="Right" VerticalAlignment="Center"
                                 HorizontalContentAlignment="Right" Height="28"/>
             <ComboBox Grid.Column="1" Grid.Row="0" Text="{Binding Item.Name}" HorizontalAlignment="Left" VerticalAlignment="Center"
-                    Width="200" Height="25" Margin="10, 0" ItemsSource="{Binding NameList}" IsEditable="True"/>
-            <Border Grid.Column="1" BorderThickness="{Binding NameError}"  BorderBrush="Red" Margin="10, 0" HorizontalAlignment="Left"
-                    VerticalAlignment="Center" Width="200" Height="28" />
+                    Width="200" Height="25" Margin="10, 0" ItemsSource="{Binding NameList}" />
             <Label Grid.Column="0" Grid.Row="1" Content="Count Unit:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <ComboBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Height="25" Margin="10, 0"
                   ItemsSource="{Binding PrepCountUnitList}" IsEditable="True" Text="{Binding Item.CountUnit}"/>
-            <Label Grid.Column="0" Grid.Row="2" Content="Line Count Par:" HorizontalAlignment="Right" VerticalAlignment="Center"
-                    HorizontalContentAlignment="Right" />
-            <Controls:NumericUpDown Grid.Column="1" Grid.Row="2" Minimum="1" StringFormat="0.##" Value="{Binding Item.LineCountPar}"
-                                HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" Height="25" Margin="10, 0" IsEnabled="{Binding !LineExtra}"/>
-            <CheckBox Grid.Column="1" Grid.Row="2" Content=":Line" IsChecked="{Binding LineExtra}" Margin="150, 0, 0, 0" HorizontalAlignment="Left"
-                      VerticalAlignment="Center" FlowDirection="RightToLeft"/>
-            <Label Grid.Column="0" Grid.Row="3" Content="Walk-in Count Par:" HorizontalAlignment="Right" VerticalAlignment="Center"
-                    HorizontalContentAlignment="Right" />
-            <Controls:NumericUpDown Grid.Column="1" Grid.Row="3" Minimum="1" StringFormat="0.##" Value="{Binding Item.WalkInCountPar}"
-                                HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" Height="25" Margin="10, 0" IsEnabled="{Binding !WalkInExtra}" />
-            <CheckBox Grid.Column="1" Grid.Row="3" Content=":Extra" IsChecked="{Binding WalkInExtra}" Margin="146, 0, 0, 0" HorizontalAlignment="Left"
-                      VerticalAlignment="Center" FlowDirection="RightToLeft"/>
+            <Label Grid.Column="0" Grid.Row="2" Content="Unit Cost:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <TextBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" Height="25" Margin="10, 0"
+                  Text="{Binding Path=Item.Cost, StringFormat=c}"/>
         </Grid>
     </Grid>
 </UserControl>
